# HolyCC2

./: *Compile-Log*  .clang-format  .clang_complete  .gitignore  CMakeLists.txt  HolyCC developers' manual  HolyCC2.kdev4  IR.c  IR.h  IR2asm.c  IR2asm.h  IRExec.c  IRExec.h  IRFilter.c  IRFilter.h  IRLiveness.c  IRLiveness.h  IRTypeInference.c  IRTypeInference.h  OpCodes.txt  README.md  SSA.c  SSA.h  SSAFindChooseNodes.c  X86AsmSharedVars.c  X86AsmSharedVars.h  abi.c  abi.h  abiI386.c  abiSysVx64.c  abiSysVx64.h  asm86.c  asm86.h  asmEmitter.c  asmEmitter.h  base64.c  base64.h  basicBlocks.c  basicBlocks.h  cacheDir.c  (+111 more)
.kdev4/: HolyCC2.kdev4
HolyCRT/: Debug.HC  ExceptLin.HC  HCRT.HC  HashTable.HC  Input.HC  IntPow.HC  JSON.HC  LoadDbgInfo.HC  OpCodes.txt  Print.HC  String.HC  Types.HC
HolyCRT64/: ExceptLin.HC  HCRT.HC  JSON.HC  String.HC  Types.HC
HolyCTests/: HelloLin.HC  IntPow.HC  StrFmt.HC
ext/skinny_mutex/: LICENSE-MIT  from.text  skinny_mutex.c  skinny_mutex.h
tests/: IRFilterTests.c  IRGenTests.c  IRLivenessTests.c  IRTypeInferenceTests.c  SSATests.c  X86OpcodesTests.c  __asmEmitterTests.c  asmEmitterTests.c  base64Tests.c  basicBlockTests.c  cacheingLexerTests.c  compileTests.c  constantPropigation.c  cykGrammarGeneratorTests.c  cykTests.c  diffTests.c  eventPoolTests.c  frameLayoutTests.c  fuzzTest.c  graphColoringTests.c  graphDominanceTests.c  graphTests.c  graphVizTests.c  ieee754Tests.c  ieee756Tests.c  lexerTests.c  linkedListTests.c  mapTests.c  parse2IRTests.c  parserTests.c  parserTestsDiag.c  preprocessorTests.c  ptrMapTests.c  registerAllocatorTests.c  ropeTests.c  strTests.c  subExprElimTests.c  subGraphTests.c  tests.c  topoSortTests.c
trash/: cacheingLexer.c  cacheingLexerItems.c  cacheingLexerItems.h  cacheingLexerTests.c  cyk.h  cykGrammarGenerator.c  diff.h  eventPool.h  eventPoolTests.c  serializeBase.c  serializeBase.h  subExprElim.c  subExprElim.h  subExprElimTests.c
