cmake_minimum_required(VERSION 3.0)
set (CMAKE_CC_STANDARD 11)

project(holycc2 LANGUAGES C)

set(sources "")
list(APPEND sources "main.c")
list(APPEND sources "linkedList.c")
list(APPEND sources "hashTable.c")
list(APPEND sources "linkedList.c")
list(APPEND sources "str.c")
list(APPEND sources "graph.c")
list(APPEND sources "readersWritersLock.c")
list(APPEND sources "ext/skinny_mutex/skinny_mutex.c")
list(APPEND sources "subGraph.c")
list(APPEND sources "utf8Encode.c")
list(APPEND sources "stringParser.c")
list(APPEND sources "preprocessor.c")
list(APPEND sources "eventPool.c")
list(APPEND sources "textMapper.c")
list(APPEND sources "graphDominance.c")
list(APPEND sources "graphColoring.c")
list(APPEND sources "object.c")
list(APPEND sources "parserA.c")
list(APPEND sources "lexer.c")
list(APPEND sources "parserB.c")
list(APPEND sources "diagMsg.c")
list(APPEND sources "exprParser.c")
list(APPEND sources "parse2IR.c")
list(APPEND sources "base64.c")
list(APPEND sources "topoSort.c")

set(tests "")
list(APPEND tests "tests/tests.c")
list(APPEND tests "tests/lexerTests.c")
list(APPEND tests "tests/linkedListTests.c")
list(APPEND tests "tests/strTests.c")
list(APPEND tests "tests/mapTests.c")
list(APPEND sources "tests/graphTests.c")
list(APPEND sources "tests/subGraphTests.c")
list(APPEND tests "tests/preprocessorTests.c")
list(APPEND tests "tests/eventPoolTests.c")
list(APPEND tests "tests/parserTests.c")
list(APPEND tests "tests/graphDominanceTests.c")
list(APPEND tests "tests/graphColoringTests.c")
list(APPEND tests "tests/parserTestsDiag.c")
list(APPEND tests "tests/base64Tests.c")

add_executable(holycc2 ${sources} ${tests})
target_include_directories(holycc2 PRIVATE ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/ext/skinny_mutex)
target_link_Libraries(holycc2 pthread ncurses)
install(TARGETS holycc2 RUNTIME DESTINATION bin)
