cmake_minimum_required(VERSION 3.0)
project(holycc2 LANGUAGES C)

if(ENABLE_ASAN)
    set (CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
				set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
				set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
endif()

set(sources "")
list(APPEND sources "ptrMap.c")
list(APPEND sources "linkedList.c")
list(APPEND sources "hashTable.c")
list(APPEND sources "linkedList.c")
list(APPEND sources "str.c")
list(APPEND sources "graph.c")
list(APPEND sources "subGraph.c")
list(APPEND sources "utf8Encode.c")
list(APPEND sources "stringParser.c")
list(APPEND sources "preprocessor.c")
list(APPEND sources "textMapper.c")
list(APPEND sources "graphDominance.c")
list(APPEND sources "graphColoring.c")
list(APPEND sources "object.c")
list(APPEND sources "parserA.c")
list(APPEND sources "lexer.c")
list(APPEND sources "parserB.c")
list(APPEND sources "diagMsg.c")
list(APPEND sources "exprParser.c")
list(APPEND sources "parse2IR.c")
list(APPEND sources "base64.c")
list(APPEND sources "topoSort.c")
list(APPEND sources "IR.c")
list(APPEND sources "intExponet.c")
list(APPEND sources "IRExec.c")
list(APPEND sources "SSA.c")
list(APPEND sources "IRLiveness.c")
list(APPEND sources "debugPrint.c")
list(APPEND sources "escaper.c")
list(APPEND sources "regAllocator.c")
list(APPEND sources "registers.c")
list(APPEND sources "init.c")
list(APPEND sources "IRFilter.c")
list(APPEND sources "IRTypeInference.c")
list(APPEND sources "basicBlocks.c")
list(APPEND sources "constantPropigation.c")
list(APPEND sources "frameLayout.c")
list(APPEND sources "asm86.c")
list(APPEND sources "opcodesParser.c")

set(tests "")
list(APPEND tests "tests/tests.c")
list(APPEND tests "tests/lexerTests.c")
list(APPEND tests "tests/linkedListTests.c")
list(APPEND tests "tests/strTests.c")
list(APPEND tests "tests/mapTests.c")
list(APPEND tests "tests/graphTests.c")
list(APPEND tests "tests/subGraphTests.c")
list(APPEND tests "tests/preprocessorTests.c")
list(APPEND tests "tests/parserTests.c")
list(APPEND tests "tests/graphDominanceTests.c")
list(APPEND tests "tests/graphColoringTests.c")
list(APPEND tests "tests/parserTestsDiag.c")
list(APPEND tests "tests/base64Tests.c")
list(APPEND tests "tests/topoSortTests.c")
list(APPEND tests "tests/SSATests.c")
list(APPEND tests "tests/IRLivenessTests.c")
list(APPEND tests "tests/graphVizTests.c")
list(APPEND tests "tests/registerAllocatorTests.c")
list(APPEND tests "tests/IRFilterTests.c")
list(APPEND tests "tests/parse2IRTests.c")
list(APPEND sources "tests/ptrMapTests.c")
list(APPEND sources "tests/IRTypeInferenceTests.c")
list(APPEND sources "tests/constantPropigation.c")
list(APPEND sources "tests/frameLayoutTests.c")
add_executable(holycc2 ${sources} ${tests})


target_include_directories(holycc2 PRIVATE ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/ext/skinny_mutex)
target_link_Libraries(holycc2 pthread m)
if(ENABLE_ASAN)
    target_compile_options(holycc2 PRIVATE -g -fno-omit-frame-pointer -fsanitize=address)
endif()

install(TARGETS holycc2 RUNTIME DESTINATION bin)

find_program(codedoc "codedoc")
if(TRUE)
	add_custom_target(doc DEPENDS ${sources})
	file(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/doc")

foreach(file ${sources})
 get_filename_component(fn ${file} NAME)
	get_filename_component(dir ${file} DIRECTORY)

file(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/doc/${dir}")
if(EXISTS "${CMAKE_SOURCE_DIR}/doc/${file}.md")
 add_custom_command(TARGET doc COMMAND codedoc --title "HolyCC:${file}" --body ${CMAKE_SOURCE_DIR}/doc/${file}.md ${CMAKE_SOURCE_DIR}/${file}>${CMAKE_SOURCE_DIR}/doc/${file}.html DEPENDS ${file})
	else ()
	add_custom_command(TARGET doc COMMAND codedoc --title "HolyCC:${file}"   ${CMAKE_SOURCE_DIR}/${file}>${CMAKE_SOURCE_DIR}/doc/${file}.html DEPENDS ${file})
	endif()	
	endforeach()
endif()
